--- a/battery-ui/src/App.css
+++ b/battery-ui/src/App.css
@@ -1,9 +1,10 @@
 .App {
   text-align: center;
+  background-color: rgb(30,30,30);
+  height: 100vh;
 }
 
 .App-header {
-  background-color: #000000;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -13,20 +14,54 @@
   color: white;
 }
 
+.background {
+  background: linear-gradient(rgba(5,5,5, 0.5),
+  rgba(5,5,5, 0.6)), url('./redback_car.webp');
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
 .live-value {
   color: white;
   font-size: calc(100px + 2vmin);
-  padding: 5%;
+  line-height: 0px;
+  padding-top: 5%;
+  font-weight: bold;
 }
 
 .redback-logo {
   max-width: calc(200px + 1vmin);
   display: flex;
-  align-self: center;
+  align-self: start;
+  padding-left: 5%;
   padding-top: 5%;
 }
 
 .value-title {
   font-size: calc(25px + 2vmin);
+  font-style: italic;
+  font-weight: bold;
 }
 
+.live {
+  color: red;
+}
+
+.WARNING {
+  padding-top: 5%;
+  color: yellow;
+  font-size: calc(35px + 2vmin);
+  font-style: italic;
+  font-weight: bold;
+}
+
+.DANGER {
+  padding-top: 5%;
+  color: red;
+  font-size: calc(35px + 2vmin);
+  font-style: italic;
+  font-weight: bold;
+}
